--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,12 @@ authors = [
     { name = "domchao", email = "d.chaopradith@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "anthropic>=0.59.0",
+    "pypdf2>=3.0.1",
+    "python-dotenv>=1.1.1",
+    "streamlit>=1.47.1",
+]
 
 [build-system]
 requires = ["hatchling"]
@@ -15,5 +20,6 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "ipykernel>=6.30.0",
     "ruff>=0.12.5",
 ]
